# Translate-Bot

./: .replit  pyproject.toml  replit.md
attached_assets/: Pasted-Build-a-professional-Telegram-bot-in-Python-for-transla_1773596479017.txt
telegram-bot/: .env.example  .gitignore  README.md  bot.py  handlers.py  premium.py  requirements.txt  srt_parser.py  translator.py
