[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0.0",
    "google-generativeai>=0.8.0",
    "groq>=0.9.0",
    "openai>=1.40.0",
    "python-dotenv>=1.0.0",
    "python-telegram-bot==21.6",
]
